[gd_scene load_steps=2 format=3 uid="uid://bm5s6en6kpncf"]

[ext_resource type="Script" uid="uid://buwedt1sr26uk" path="res://Account_Menu.gd" id="1_37kl0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 605.0
offset_bottom = 425.0
script = ExtResource("1_37kl0")

[node name="CreateAccountPanel" type="Button" parent="PanelContainer"]
layout_mode = 2

[node name="UsernamePanel" type="TextEdit" parent="PanelContainer"]
layout_mode = 2

[node name="PasswordPanel" type="TextEdit" parent="PanelContainer"]
layout_mode = 2

[node name="LoginPanel" type="Button" parent="PanelContainer"]
layout_mode = 2
